--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <a href="#mission">Mission</a>
         </span>
         <span>
-          <a href="#featuredtea">Featured Tea</a>
+          <a href="#teas">Featured Tea</a>
         </span>
         <span>
           <a href="#locations">Locations</a>
@@ -23,12 +23,17 @@
     </header>
     <!-- Main Content -->
     <div class="main">
+      <!--Mission -->
       <div class="cover">
-        <div class="mission">
+        <div id="mission">
         <h2>Our Mission</h2>
         <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
       </div>
+      <!-- Featured Tea -->
+      <div id="teas">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
     </div>
   </body>
 </html>
