--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
       </div>
       <!-- Featured Tea -->
       <div id="teas">
+        <div class="text-content">
         <h2>Tea of the Month</h2>
-        <h4>What's Steeping at The Tea Cozy?</h4>
+        <h4>What's Steeping at The Tea Cozy</h4>
+        </div>
+      </div>
     </div>
   </body>
 </html>
